tests/errors/test_30.x
// Identifier declared void[]


fn main() -> int {

    let x: void[];
}